--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>sohu mango<title>
+</head>
+<body>
+  <h1>hello</h1>
+  <footer>mango 2019</footer>
+</body>
+</html>
