--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>sohu mango<title>
 </head>
 <body>
-  <h1>hello</h1>
-  <footer>mango 2019</footer>
+demo from sohumango
+<br>
+on github page
 </body>
 </html>
