--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>sohu mango<title>
-</head>
-<body>
-demo from sohumango
-<br>
-on github page
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>sohumango</title>
+  </head>
+  <body>
+    <p>hello world</p>
+  </body>
 </html>
